--- a/web/css/app.css
+++ b/web/css/app.css
@@ -28,3 +28,28 @@
   content: "";
   padding: 0;
 }
+
+.center {
+    text-align:center;
+    vertical-align:middle;
+}
+
+.text-right {
+    font-size:x-small;
+    font-weight:bold;
+    text-align:right;    
+}
+
+.clickable {
+    cursor:pointer;
+}
+
+.left-right {
+    display:flex;
+    font-size: x-small;
+    color:gray;
+}
+.full-image {
+    max-height:300px;
+    max-width:150px;
+}
